Add alignment check to TransformationMatrix SkMatrix44 constructor

Bug: 771329
Change-Id: I9585afb60639174f5d5e840da3c958f310ff5a60
Reviewed-on: https://chromium-review.googlesource.com/709457
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508538}
Former-commit-id: f8bd3bd533077b6eafabe67e62b5bdee7a502be3